--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -54,4 +54,4 @@ We may update this Privacy Policy from time to time. Any changes will be posted 
 ## Contact Us
 If you have any questions about this Privacy Policy, you may contact us at:
 
-**Email:** [your email here]
+**Email:** paulskc44@gmail.com
