--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,57 +1,82 @@
-# Privacy Policy
+Privacy Policy
+Last Updated: February 27, 2026  |  App: Discovery Bible Study
 
-Last updated: [Month Day, Year]
+This Privacy Policy explains how Discovery Bible Study ("we", "our", or "the app") collects, uses, stores, and protects your personal information. By using the app, you agree to the practices described here.
 
-This Privacy Policy describes how apps developed by Mangotangos (“we”, “our”, “us”) handle user information. This policy applies to all our mobile applications, including but not limited to Discover Bible and Digital Rest.
+1. Information We Collect
+To create and manage your account, we collect:
 
-## Information We Collect
-To create and manage your account, we collect the following information:
+Email address — used for login and optional reminder notifications
+Password — stored in securely hashed (encrypted) form; never stored in plain text
+Display name — shown within study groups
+Device information — device brand and model, used for troubleshooting and compatibility
+When you use the app, we also store the following user-generated content linked to your account:
 
-- **Email address** (used for login and communication)
-- **Password** (securely stored in encrypted form)
-- **Device information** such as device brand and model (used only for account setup and troubleshooting)
+Study session responses (gratitude, challenges, discoveries, obedience, prayer notes)
+Verse notes and verse highlights
+Journal entries
+Commitments and completion records
+Weekly reflections
+Daily check-in and streak data
+Study group memberships
+This content is spiritual and personal in nature. It is stored securely and used only to provide app functionality.
 
-We do not collect any additional personal information.
-
-## How We Use Your Information
-We use the information we collect for the following purposes:
-
-- **Account creation and authentication**
-- **Allowing you to log in securely**
-- **Sending optional reminder emails** if you choose to enable them
-- **Improving app reliability and user experience**
-
-We do not use your information for advertising, analytics, or tracking.
-
-## Data Storage and Security
-Your information is stored securely on our servers. Passwords are encrypted and cannot be viewed by us.
-
-We take reasonable measures to protect your data from unauthorized access, loss, or misuse.
-
-## What We Do NOT Collect
+2. How We Use Your Information
+Account creation and authentication
+Allowing you to log in securely and access your data across devices
+Saving and syncing your study progress, notes, and journal entries
+Enabling group study features
+Sending optional reminder notifications (only if you enable them)
+Improving app reliability and user experience
+We do not use your information for advertising, analytics, or behavioral tracking.
+3. Information We Do NOT Collect
 We do not collect:
 
-- Location data  
-- Contact lists  
-- Photos, media, or files  
-- Usage analytics  
-- Advertising identifiers  
-- Behavioral tracking data  
+Location data
+Contact lists or phone numbers
+Photos, camera, or media files
+Usage analytics or behavioral tracking data
+Advertising identifiers (IDFA, GAID, etc.)
+Financial or payment information
+4. Data Storage and Security
+Your data is stored on secure, cloud-hosted infrastructure (Railway). We use industry-standard practices including:
 
-Your activity inside the app (such as study progress or notes) is stored locally on your device unless explicitly synced to your account.
+Encrypted password storage (hashing)
+Secure authentication via JWT tokens
+HTTPS for all data transmission
+No security system is 100% guaranteed, but we take reasonable measures to protect your information from unauthorized access, loss, or misuse.
 
-## Third-Party Sharing
-We do **not** sell, rent, or share your personal information with third parties.
+5. Third-Party Sharing
+We do not sell, rent, or share your personal information with third parties. We do not use third-party advertising networks, analytics SDKs, or data brokers.
 
-We do not use third‑party analytics, advertising networks, or external SDKs that collect data.
+Your data is only stored on our secure backend infrastructure to provide app functionality.
 
-## Children’s Privacy
-Our apps are safe for all ages. However, accounts should be created by adults or with adult supervision. We do not knowingly collect personal information from children under 13.
+6. Data Retention
+We retain your data for as long as your account is active. If you request account deletion, your personal data and all associated content (journal entries, notes, session responses, etc.) will be permanently deleted within 30 days.
 
-## Changes to This Policy
-We may update this Privacy Policy from time to time. Any changes will be posted here with an updated “Last updated” date.
+7. Account and Data Deletion
+You have the right to delete your account and all associated data at any time. You can do this directly within the app:
 
-## Contact Us
-If you have any questions about this Privacy Policy, you may contact us at:
+Go to Settings → Delete Account
+Confirm deletion — your account and all associated data will be permanently removed
+Alternatively, you may contact us at paulskc44@gmail.com with subject line "Delete My Account" and we will process the request within 30 days. This action is irreversible.
 
-**Email:** paulskc44@gmail.com
+8. Children's Privacy
+Discovery Bible Study is intended for users aged 16 and older. We do not allow users under 16 to create accounts or use the app. We do not knowingly collect personal information from anyone under 16. If we become aware that a user under 16 has created an account, we will immediately delete their account and all associated data. If you believe an underage user has registered, please contact us at paulskc44@gmail.com so we can take action promptly.
+
+9. Your Rights
+You have the right to:
+
+Access the personal data we hold about you
+Request correction of inaccurate data
+Request deletion of your data and account
+Withdraw consent at any time by discontinuing use of the app
+To exercise any of these rights, contact us at paulskc44@gmail.com.
+
+10. Changes to This Policy
+We may update this Privacy Policy from time to time. If we make significant changes, we will update the "Last Updated" date at the top of this page. Continued use of the app after changes constitutes acceptance of the updated policy.
+
+11. Contact Us
+If you have questions or concerns about this Privacy Policy or how your data is handled, contact us at:
+
+paulskc44@gmail.com
